[package]
name = "chemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tlms = { version = "0.8", git = "https://github.com/tlm-solutions/tlms.rs", features = ["grpc"]}
clap = { version = "4", features = ["derive"] }

# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0"

# grpc and protobuf
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# utils
log = "0.4"
chrono = "0.4"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.7"
